# RemoteProc

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/Client/: CMakeLists.txt  main.c
examples/Server/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  message_utils.c  message_utils.h  meta_info.c  meta_info.h  remote_routine.c  remote_routine.h  sock_utils.c  sock_utils.h
lib/tp_poll/: CMakeLists.txt
lib/tp_poll/include/: tp_node.h  tp_task.h  tp_task_queue.h  tp_thread_pool.h
lib/tp_poll/src/: tp_node.c  tp_task.c  tp_task_queue.c  tp_thread_pool.c
